+++ version 3.0-alpha1
* notify: #2963 fixed: do not mix up New chat and New message notifications (Vogel)

+++ version 3.0-alpha1
* gadu: #2937 fixed: file transfers are now compatible with GG 12 and GG Drive (Vogel)
* gui: #1713 implemented: added option to always show identity in buddies list (Vogel)
* gui: #2309 implemented: added expand/collapse items to buddies list popup menu (Vogel)
* gadu: TLS enabled by default for new accounts (Vogel)
* sound: #383 implemented: option to configure per-buddy sound file (Vogel)
* gui: #2811 fixed: do not show "Move to group" menu option if moving from Everybody or Ungroupped (Vogel)
* encryption_ng: #2952 implemented: add depreceation message (Vogel)
* gadu: #2241 implemented: update contact's avatars on GG event (Vogel)
* gui: #2944 fixed: proper behavior with different combination of window title blinking and new message count included in title (Vogel)
* gui: #2767 fixed: new look for "Add group" window (Vogel)
* unity: #2965 fixed: show progress on file transfers on Unity Launcher icon (Vogel)
* windows: #2965 fixed: show progress on file transfers on Windows icon (Vogel)

+++ version 2.0
* unity: #2699 fixed: force indicator_docking on Unity (Vogel)
* translations: complete French translation (darkpumpkins)

+++ version 2.0-rc3
* core: various crashes fixed (Vogel)
* gui: #2732 implemented: do not download avatars when showing them is disabled (Vogel)
* translations: update French translation (darkpumpkins)

+++ version 2.0-rc2
* gui: #2940 fixed: crash on exit when not using tabs plugin (Vogel)
* otr: #2947 fixed: <span> marks in GG messages when otr is enabled (Vogel)
* translations: complete Turkish translation (kardanadam26)
* hints: #2924 fixed: not displaying avatars (Vogel)

+++ version 2.0-rc1
* translations: #2943 fixed: re-added Qt translation files (Vogel)
* translations: add Turkish translation (kardanadam26)

+++ version 2.0-beta1
* docking: #2921 done: change tooltip text on Windows (Vogel)